objects/agf__Retrospective__c.object
<CustomObject>
    <description>A retrospective is a means of collecting/providing feedback about an individual&apos;s performance on a particular release</description>
    <fields>
        <fullName>agf__Is_Current_User_the_manager__c</fullName>
        <description>Checks whether the current user is the manager for this retrospective record</description>
        <formula>IF($User.Username = agf__Manager__r.Username, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User the manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Is_Current_User_the_owner__c</fullName>
        <formula>IF($User.Username = agf__User__r.Username, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User the owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The retrospective&apos;s subject&apos;s manager</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Overall_Rating_employee__c</fullName>
        <description>Overall Rating as seen by the employee for this release</description>
        <inlineHelpText>Please specify the overall rating for your performance in this release</inlineHelpText>
        <label>Overall Rating (employee)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunny</fullName>
                </value>
                <value>
                    <fullName>Partly Sunny</fullName>
                </value>
                <value>
                    <fullName>Cloudy</fullName>
                </value>
                <value>
                    <fullName>Rain Showers</fullName>
                </value>
                <value>
                    <fullName>Blizzard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Overall_Rating_manager__c</fullName>
        <description>Overall Rating of this employee&apos;s performance in this release as seen by the manager</description>
        <inlineHelpText>Please specify the overall rating of this employee during this release</inlineHelpText>
        <label>Overall Rating (manager)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunny</fullName>
                </value>
                <value>
                    <fullName>Partly Sunny</fullName>
                </value>
                <value>
                    <fullName>Cloudy</fullName>
                </value>
                <value>
                    <fullName>Rain Showers</fullName>
                </value>
                <value>
                    <fullName>Blizzard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Review_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The release for which this retrospective applies</description>
        <label>Retrospective Period</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipName>Release_Retrospectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <description>Status of the retrospective.  One of &apos;New&apos;, &apos;Submitted&apos;, or &apos;Shared&apos;</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User&apos;s Team</description>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipName>Release_Retrospectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The subject of the release retrospective</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__What_Didn_t_Go_Well_employee__c</fullName>
        <description>What Didn&apos;t Go Well in this release as seen by the employee</description>
        <inlineHelpText>Please specify what did not go well in this release</inlineHelpText>
        <label>What Didn&apos;t Go Well (employee)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__What_Didn_t_Go_Well_manager__c</fullName>
        <description>What Didn&apos;t Go Well as seen by the manager</description>
        <inlineHelpText>Please specify what did not go well in this release for this employee</inlineHelpText>
        <label>What Didn&apos;t Go Well (manager)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__What_To_Do_Better_Next_Time_employee__c</fullName>
        <description>What To Do Better in the next release as seen by the employee</description>
        <inlineHelpText>Please specify what you can do better in the next release</inlineHelpText>
        <label>What To Do Better Next Time (employee)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__What_To_Do_Better_Next_Time_manager__c</fullName>
        <description>What To Do Better Next Time as seen by the manager</description>
        <inlineHelpText>Please specify what this employee can do better next time</inlineHelpText>
        <label>What To Do Better Next Time (manager)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__What_Went_Well_employee__c</fullName>
        <description>What Went Well in the release as seen by the employee</description>
        <inlineHelpText>Please specify what went well during this release</inlineHelpText>
        <label>What Went Well (employee)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__What_Went_Well_manager__c</fullName>
        <description>What Went Well as seen by the manager</description>
        <inlineHelpText>Please specify what went well in this release</inlineHelpText>
        <label>What Went Well (manager)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Retrospective</label>
    <listViews>
        <fullName>agf__My_retrospectives</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>agf__User__c</columns>
        <columns>agf__Manager__c</columns>
        <columns>agf__Review_Period__c</columns>
        <columns>agf__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Is_Current_User_the_manager__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>agf__Is_Current_User_the_owner__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>My retrospectives</label>
    </listViews>
    <nameField>
        <label>Retrospective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retrospectives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>